# Altofalante

./: .gitignore  .vercelignore  CMakeLists.txt  README.md  index.html  vercel.json
.github/workflows/: ci.yml  pages.yml
app/: NATIVE.md  README.md  pubspec.yaml
app/lib/: audio_engine.dart  main.dart  sync_service.dart  system_boost.dart  theme.dart
app/native/android/: CMakeLists.txt  MainActivity.kt  SystemAudioEffects.kt  native-lib.cpp
app/native/ios/: AppDelegate.swift  AudioEngineBridge.swift  Runner-Bridging-Header.h  SyncController.swift
branding/: brand-guide.md
docs/: ANUNCIO-ANDROID.md  DO-ZERO-AO-CELULAR.md  GUIA-DEV-INICIANTE.md  GUIA.md  LOJAS.md  MONETIZACAO.md  TESTE-MULTICELULAR.md  privacidade.html
dsp-core/: CMakeLists.txt
dsp-core/include/altofalante/: dsp.h
dsp-core/src/: analyzer.cpp  biquad.h  eq.cpp  exciter.cpp  gain.cpp  limiter.cpp  multiband_comp.cpp  pipeline.cpp  presets.cpp  stages.h  stereo_widen.cpp
preview/: altofalante.html
pwa/: README.md  index.html  manifest.webmanifest  sw.js
specs/: 00-vision.md  01-product-spec.md  02-architecture.md  03-dsp-engine.md  04-multidevice-sync.md  05-roadmap.md  06-estrategia.md  07-android-system-audio.md
sync-core/: CMakeLists.txt  sync_node.cpp  sync_sim.cpp
sync-core/include/altofalante/: net.h  sync.h  sync_api.h
sync-core/src/: clock_sync.cpp  net.cpp  protocol.h  scheduler.cpp  sync_api.cpp
tools/: CMakeLists.txt  analyze_wav.cpp  demo.sh  gen_mimic_song.py  gen_test_audio.py  measure.py  process_wav.cpp  sync_net_test.sh  test_invariants.cpp  wav.h
